add restart text

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, Q and E to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hidden layers,. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, Q and E to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hidden layers, ESC and 0 to restart. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
     <p>
