--- a/index.html
+++ b/index.html
@@ -257,10 +257,16 @@
       </div>
     </div>
     <div class="touch-buttons">
-      <div class="touch-button touch-hidden">1</div>
-      <div class="touch-button touch-hidden">2</div>
-      <div class="touch-button touch-hidden">3</div>
-      <div class="touch-button touch-rotate">Rotate</div>
+      <div class="button-group">
+        <div class="touch-button tap" data-type="move" data-value="4">F</div>
+        <div class="touch-button tap" data-type="move" data-value="5">B</div>
+        <div class="touch-button tap" data-type="rotate">Rotate</div>
+      </div>
+      <div class="button-group">
+        <div class="touch-button long-tap">1</div>
+        <div class="touch-button long-tap">2</div>
+        <div class="touch-button long-tap">3</div>
+      </div>
     </div>
 
     <p class="game-explanation">
