--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
       </div>
     </div>
 
-    <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, Q and E to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hidden layers, ESC and 0 to restart. When two tiles with the same number touch, they <strong>merge into one!</strong>
-    </p>
-    <hr>
     <p id="alipay" style="display:none">
        <a href='http://me.alipay.com/qiyu'><img src='https://img.alipay.com/sys/personalprod/style/mc/btn-index.png' /></a>
     </p>
+    <p class="game-explanation">
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, Q and E to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hide layers, ESC and 0 to restart. When two tiles with the same number touch, they <strong>merge into one!</strong>
+    </p>
+    <hr>
     <p>
     Created by <a href="http://qiyuuu.com" target="_blank">Baiqiang</a>. Based on <a href="http://gabrielecirulli.github.io/2048/" target="_blank">Gabriele Cirulli's 2048.</a>
     </p>
