--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
       </div>
     </div>
 
-    <p id="alipay" style="display:none">
+    <p class="game-explanation" id="alipay" style="display:none">
        <a href='http://me.alipay.com/qiyu'><img src='https://img.alipay.com/sys/personalprod/style/mc/btn-index.png' /></a>
     </p>
-    <p class="game-explanation">
+    <p>
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, Q and E to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hide layers, ESC and 0 to restart. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
