--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
     </div>
     <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+    <p class="game-intro"><a href="http://baiqiang.github.io/2048/">More 2048</a></p>
 
     <div class="game-container">
       <div class="game-message">
