--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, R(or Q) and F(or E) to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hide layers, ESC and 0 to restart. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, R(or Q) and F(or E) to move ahead and back, any useless letter key to rotate, hold 1, 2 or 3 to hide layers, ESC and 0 to restart. When two tiles with the same number touch, they <strong>merge into one!</strong>.<br />
+      There're <strong>bonus tiles</strong> which can only be merged with the same one.
     </p>
     <hr>
     <p>
