Explain bonus tiles in README.md and index.html (the latter will have to be merged manually).

--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
 
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles, any useless letter key to rotate, hold 1, 2 or 3 to hidden layers,. When two tiles with the same number touch, they <strong>merge into one!</strong>
+    <br />
+    <br />
+      <strong class="important">Special tiles:</strong>There are 3 'bonus' tiles, '4', '64' and '256'. They have different colors from normal tiles and can only be merged with same one. Both tiles will disappear after being merged.
+It's not a really bonus tile. I added them just to increase difficulty. Since the 3d version has more tiles and more directions, it's much easier than the normal version if there's no traverse. Do you have any good idea?</strong>
     </p>
     <hr>
     <p>
